[CXF-7517]detect jvm version and specify necessary jvm args for java9 so that users needn't specify it in plugin configuration